src/test/deca/syntax/valid/objet/DeclClassParamMult.deca
// Description : test déclaration d'une méthode avec multiple paramètres
// Resultats : ok

class Thing {

    int getI(int i, int j, string char, float fifi){
        print("cool");
    }

}
